--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "D2MCS"]
+	path = D2MCS
+	url = https://github.com/drordas/d2mcs
+	shallow = true
+	registered = true
